Documentation: Update changelog. Set release date for Beta 1

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -19,7 +19,7 @@
 <div class="version" aria-label="2.0">
 
     <a id="2.0-beta.1"></a>
-    <h1>Chamilo 2.0 beta 1 - Metronum, 2025-10-?</h1>
+    <h1>Chamilo 2.0 beta 1 - Metronum, 2025-10-30</h1>
     <h3>Release notes - summary</h3>
     <p>
         Chamilo 2.0 (stable) will be a major release, a new branch for the Chamilo software.
@@ -58,6 +58,7 @@
 
     <h3>Added</h3>
     <ul aria-live="off">
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/2653351fb9f54512a1775e66151719e0b05e65c4">2653351f</a>) Documentation: Add Windows installation guide</li>
         <li>[2025-10-28] (<a href="https://github.com/chamilo/chamilo-lms/commit/74108d056e021c8b63cae773e9f7e1b551ce614d">74108d05</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6738">GH#6738</a>) Admin: #add health check box on admin page</li>
         <li>[2025-10-28] (<a href="https://github.com/chamilo/chamilo-lms/commit/611c21af0381c94d5973b9a74518278e99a198d3">611c21af</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6807">GH#6807</a>) Admin: Add icon with setting category and variable in settings page (only in dev server mode)</li>
     </ul>
@@ -69,6 +70,13 @@
 
     <h3>Fixed</h3>
     <ul aria-live="off">
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/b81ea79369860253dfa45f90b668595c64d2d178">b81ea793</a>) Documentation: Update PHP settings in Windows installation guide</li>
+        <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/53726fca723c1f99c55a8894131149ffcf081bed">53726fca</a>) Display: Add loading cursor on route change using Tailwind utility classes</li>
+        <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/2cbc1bd4076ab0a85224e0c3d926c89c3eeedd96">2cbc1bd4</a>) Course: Place "Switch to student view" above-right</li>
+        <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/55236039b5c16aea9d0fe81f1c37d622e7681aea">55236039</a>) Language: Fix courses term in Spanish (was same as LP)</li>
+        <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/5cc518112233ea544e15354c691318613194db6f">5cc51811</a>) Display: Add submit button in FormNewDocument component to avoid toolbar button</li>
+        <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/5e6b4f7efa7305a18f149ba93a3ae102af3ed049">5e6b4f7e</a>) Chat: Use theme --color-primary-base for global chat FAB</li>
+        <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/f37d401810c0f5c0862856c40168f7816d65bb54">f37d4018</a> - <a href="https://task.beeznest.com/issues/22639">BT#22639</a>) Auth: Skip auth source verification for LoginTokenAuthenticator</li>
         <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/8c89a099eab4ebba494818306496feebeef5b344">8c89a099</a>) User: Internals: Fix to remove non-existent relation in the updated structure to avoid errors in user deletion</li>
         <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/235debc223c8ed05624c9e070de5879938b84b6c">235debc2</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6837">GH#6837</a>) Exercise: Restore export all results feature from 1.11.x</li>
         <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/ab108f0d6dc40eb3448f3923146dcca6f211f602">ab108f0d</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2805">GH#2805</a>) Catalogue: Fix showing correct registration button for courses</li>
