Documentation: Remove dead links in legacy changelog (avoid misuse)

--- a/public/documentation/legacy/changelog.html
+++ b/public/documentation/legacy/changelog.html
@@ -10117,14 +10117,11 @@ providers (see our website, <i>Support</i> tab).
             1.8.4 is both a features and debuggingmajor release.</p>
         <h3>New Features</h3>
         <ul>
-            <li>Templates. See <a href="http://www.dokeos.com/templates.php">http://www.dokeos.com/templates.php</a>
-            </li>
+            <li>Templates</li>
             <li>Wide Hotspots tests to allow real-life situations simulation</li>
             <li>Flash video import and streaming</li>
-            <li>Installation guide renewed. See&nbsp;<a href="http://www.dokeos.com/doc/installation_guide.html">http://www.dokeos.com/doc/installation_guide.html</a>
-            </li>
-            <li>Added animated Mr Dokeos character : <a href="http://www.dokeos.com/mrdokeos.php">http://www.dokeos.com/mrdokeos.php</a>
-            </li>
+            <li>Installation guide renewed.</li>
+            <li>Added animated Mr Dokeos character</li>
             <li>English and Dutch teacher manual added</li>
             <li>Assignments form now fills automatically with document title and user name</li>
             <li>Document authoring space now bigger</li>
