Documentation: Update changelog

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -70,6 +70,15 @@
 
     <h3>Fixed</h3>
     <ul aria-live="off">
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/163e958316ba617da12de49231f9730e4d6cd092">163e9583</a>) Internal: Remove forum_category language extrafield from install</li>
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/dc07ece0372379d2b4cab64901e63520c319ef81">dc07ece0</a>) Internal: Sidebar open by default on fresh installs</li>
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/876d61b8c4b95fd7f26c67150cf6433fce0505e5">876d61b8</a>) Install: Avoid double HTML entity encoding in JSON response ensure UTF-8 text displays correctly in Vue forms</li>
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/f04615105c655790fd3333ce2b8bcb275c416821">f0461510</a>) Internal: Data filler: improvements and fixes for users & courses generation</li>
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/977adfdcee9468fd866eae99a4b466e57af6d343">977adfdc</a>) Internal: Enforce 8px gap between action buttons in toolbar</li>
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/b3f8c2c9a1ad313187bce94d8337bb61f0fedbf1">b3f8c2c9</a>) Admin: Fix test-mode icon by using platform.server_type in settings page</li>
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/8edb43141aac7d425471ad02436c9460e3383eec">8edb4314</a>) Internal: Normalize breadcrumb styling across app</li>
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/ff2b187df2f0062bd5fe7ffe7c8b62fdbf2c559e">ff2b187d</a>) Documentation: Add noopener noreferrer rel to installation guide link</li>
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/75923c5b5f93c73a08deb4f930ff7c7e1b13c1b7">75923c5b</a>) Documentation: Add _blank target to links to installation guide to avoid context switch during install</li>
         <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/b81ea79369860253dfa45f90b668595c64d2d178">b81ea793</a>) Documentation: Update PHP settings in Windows installation guide</li>
         <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/53726fca723c1f99c55a8894131149ffcf081bed">53726fca</a>) Display: Add loading cursor on route change using Tailwind utility classes</li>
         <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/2cbc1bd4076ab0a85224e0c3d926c89c3eeedd96">2cbc1bd4</a>) Course: Place "Switch to student view" above-right</li>
