Documentation: Update changelog.html

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -19,7 +19,7 @@
 <div class="version" aria-label="2.0">
 
     <a id="2.0-beta.1"></a>
-    <h1>Chamilo 2.0 beta 1 - Metronum, 2025-10-30</h1>
+    <h1>Chamilo 2.0 beta 1 - Metronum, 2025-10-31</h1>
     <h3>Release notes - summary</h3>
     <p>
         Chamilo 2.0 (stable) will be a major release, a new branch for the Chamilo software.
@@ -70,6 +70,21 @@
 
     <h3>Fixed</h3>
     <ul aria-live="off">
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/bb19218932e9655e757d55d63cb972d056d18aca">bb192189</a>) Internal: Restore positional interpolation for selection counters</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/d82b4fe925caffc7e2488f0f0c33f93aae55443b">d82b4fe9</a>) Social: Use theme primary for active states</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/0c69efd773f005422778b7694ffad61d4cd4b855">0c69efd7</a>) Internal: Ensure text/html MIME for HTML docs created from learnpath</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/03efea22127d945e4ca91b3e9ab62c698b1319dc">03efea22</a>) Internal: Fix session title spacing in breadcrumb</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/d9d4376498ba0ad4cef37882f2e4f39598ef252d">d9d43764</a>) Career: Fix change name to title in queries</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/72cc9163bb575ee4f0b8b00dcc86726e3ff12d75">72cc9163</a>) Learnpath: Render lesson-created HTML inline and enable preview from documents</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/8ec6633dd9d3cbd72caf452de197d3a42684c9d9">8ec6633d</a>) Internal: Add `void` return type to `preUpdate` method in `ResourceNodeListener` and remove unused `return` statement</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/a73416433bc4c78c097a2f21bedc113d0a4be1e6">a7341643</a>) Vendor: Upgrade `vich/uploader-bundle` to `^2.8` and migrate annotations to PHP 8 attributes</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/e82d54e5da3242b32d5f971cd53551508a51a6a1">e82d54e5</a>) Session: Add 8px spacing between tabs</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/a81544cb5b2b6cf28f6e92cd3095aa78b2cfaf62">a81544cb</a>) Social: Use primary color for selected message tabs in Account/Home</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/9a152af951f227d895498e5177f528128a7a249e">9a152af9</a>) Admin: files_info — handle null originalName safely</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/5b2617b46bfec31f90ccdc0ef44f28c45d122862">5b2617b4</a>) Course: fix (resource-selector), correct selection counter</li>
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/4b108906d0e8b31bd4af78a950b66101e38dcb03">4b108906</a>) Internal: Simplify Doctrine ORM setup by replacing annotations with attributes and removing unused dependencies</li>
+        <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/8a6ae1ff1b7dbcd9ff077f8a648515017e497e87">8a6ae1ff</a>) Vendor: Remove sensio/framework-extra-bundle</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/3a2d3af03ea3a939b51e4f329738b72f7b9a36a8">3a2d3af0</a>) Install: Fix editor text in Step 3</li>
         <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/163e958316ba617da12de49231f9730e4d6cd092">163e9583</a>) Internal: Remove forum_category language extrafield from install</li>
         <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/dc07ece0372379d2b4cab64901e63520c319ef81">dc07ece0</a>) Internal: Sidebar open by default on fresh installs</li>
         <li>[2025-10-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/876d61b8c4b95fd7f26c67150cf6433fce0505e5">876d61b8</a>) Install: Avoid double HTML entity encoding in JSON response ensure UTF-8 text displays correctly in Vue forms</li>
