Documentation: Update changelog.html

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -70,6 +70,12 @@
 
     <h3>Fixed</h3>
     <ul aria-live="off">
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/a87ed000c28de0182e011b767032905ed813fc45">a87ed000</a>) Career: Fix change name to title</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/7e0b0dd499c202eee211aa115a766d0e99017d2c">7e0b0dd4</a>) Promotion: Fix change name to title</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/96ab6269014573773f2379e93d13dd762516b9c8">96ab6269</a>) Session: Improve summary UI/UX</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/cabe770b82214290d43c7e0b4f6bf3d31a6c5dbc">cabe770b</a>) Internal: Remove api_get_jqgrid_js function inserts (deprecated)</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/b9a8b62abf3229a2f1b33bca710d80e10838a12d">b9a8b62a</a>) Admin: Translate settings breadcrumb section label</li>
+        <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/03e46186a487fd5cffa9b9ff51a633806332811e">03e46186</a>) Promotion: Fix change of name to title in queries</li>
         <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/bb19218932e9655e757d55d63cb972d056d18aca">bb192189</a>) Internal: Restore positional interpolation for selection counters</li>
         <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/d82b4fe925caffc7e2488f0f0c33f93aae55443b">d82b4fe9</a>) Social: Use theme primary for active states</li>
         <li>[2025-10-31] (<a href="https://github.com/chamilo/chamilo-lms/commit/0c69efd773f005422778b7694ffad61d4cd4b855">0c69efd7</a>) Internal: Ensure text/html MIME for HTML docs created from learnpath</li>
